--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h1 {
   text-transform: uppercase;
   font-size: 120px;
   margin: 0px 0;
+  user-select: none;
 }
 
 /*
@@ -84,6 +85,7 @@ https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
   position: relative;
   text-decoration: none;
   font-size: 20px;
+  user-select: none;
 }
 
 .nav a::before,
@@ -126,7 +128,7 @@ https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
   background-size: 400%;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  animation: txt-animation infinite 25s;
+  animation: txt-animation infinite 20s;
   color: lightgray;
 }
 
@@ -144,4 +146,11 @@ https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
   font-family: 'Cairo';
   text-transform: capitalize;
   font-size: 10pt;
+  user-select: none;
+}
+
+.cpyrght::selection,
+.nav a::selection, 
+h1::selection {
+  background: transparent;
 }
