--- a/style.css
+++ b/style.css
@@ -3,48 +3,48 @@
 
 body {
   background-color: #1a1a1a;
-  color: #fefefe;
+  color: white;
   text-transform: uppercase;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.3em;
   font-size: 1.3em;
-  line-height: 2;
-  font-weight: 300;
-  text-rendering: optimizeLegibility;
   text-align: center;
   padding: 0;
   margin: 0;
 }
 
 .text {
-  font-family: "Cairo";
   text-align: center;
-  color: #FFF;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 95vh;
-  letter-spacing: 1px;
-  line-height:2
-}
+} 
 
 h1 {
+  font-family: "cairo";
   background-image: url(https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif);
-  background-size: cover;
   color: transparent;
   -moz-background-clip: text;
   -webkit-background-clip: text;
   text-transform: uppercase;
   font-size: 120px;
-  margin: 0px 0;
-  user-select: none;
+  margin: 0;
+  height: 200px;
+  margin-bottom: 10vh;
+  padding: 0;
 }
+h2 {
+  font-family: "cairo";
+  color: white;
+  background-size: cover;
+  text-transform: uppercase;
+  font-size: 40px;
+  margin: 0;
+  padding: 0;
+  height: 60px;
 
-/*
-https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif
-https://images.squarespace-cdn.com/content/v1/5a9b5ce89f87708f9ed85aa4/1521091607294-Q7BCOMTX87IYXWDRRP0R/Footer-gradient.gif?format=2500w
-https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
-*/
+}
 
 .nav {
   font-family: 'Cairo';
@@ -86,59 +86,13 @@ https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
   text-decoration: none;
   font-size: 20px;
   user-select: none;
-}
+} 
 
-.nav a::before,
-.nav a::after {
-  content: '';
-  height: 14px;
-  width: 14px;
-  position: absolute;
-  transition: all .35s ease;
-  opacity: 0;
-}
-
-.nav a::before {
-  content: '';
-  right: 0;
-  top: 0;
-  border-top: 3px solid orange;
-  border-right: 3px solid rgb(151, 98, 0);
-  transform: translate(-100%, 50%);
-}
-
-.nav a:after {
-  content: '';
-  left: 0;
-  bottom: 0;
-  border-bottom: 3px solid orange;
-  border-left: 3px solid rgb(151, 98, 0);
-  transform: translate(100%, -50%)
-}
-
-.nav a:hover:before,
-.nav a:hover:after{
-  transform: translate(0,0);
-  opacity: 1;
-}
-
-.nav a:hover {
-  width: 100px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(10%,#9f5cf8), color-stop(20%,#d65db1), color-stop(30%,#ff6f91), color-stop(40%,#ff9671), color-stop(50%,#ffc75f), color-stop(60%,#f9d571), color-stop(70%,#ffc75f), color-stop(80%,#ff9671), color-stop(87%,#ff6f91), color-stop(93%,#d65db1), color-stop(100%,#9f5cf8));
-  background-size: 400%;
-  -webkit-text-fill-color: transparent;
+a:hover{
+  background-image: url(https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif);
+  color: transparent;
+  -moz-background-clip: text;
   -webkit-background-clip: text;
-  animation: txt-animation infinite 20s;
-  color: lightgray;
-}
-
-@keyframes txt-animation {
-  0%{
-    background-position: 0%;
-  }
-  100%{
-    background-position: 400%;
-  }
 }
 
 .cpyrght {
@@ -147,10 +101,4 @@ https://cdn.dribbble.com/users/1770290/screenshots/6158205/bg_75.gif
   text-transform: capitalize;
   font-size: 10pt;
   user-select: none;
-}
-
-.cpyrght::selection,
-.nav a::selection, 
-h1::selection {
-  background: transparent;
-}
+} 
