--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h2 {
 @media (max-width: 900px) {
   #blob {display: none;}
   }
+  h1{font-size: 100px; margin: 0;}
 
 .nav * {
   box-sizing: border-box;
