--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Cairo');
-
 body {
   background-color: #1a1a1a;
   color: white;
@@ -25,7 +23,6 @@ body {
 } 
 
 h1 {
-  font-family: 'Space Mono', monospace;
   background-image: url(https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif);
   color: transparent;
   -moz-background-clip: text;
@@ -33,15 +30,18 @@ h1 {
   text-transform: uppercase;
   font-size: 120px;
   margin: 0;
-  height: 200px;
+  margin-top: 10px;
   margin-bottom: 10vh;
   padding: 0;
   z-index: 3;
-  display: flex;
-  height: 150px;
+  height: 85px;
+  line-height: 85px;
+  width: 280px;
+  animation: showup 3.5s;
+  font-weight: bold;
 }
+
 h2 {
-  font-family: 'Space Mono', monospace;
   color: white;
   background-size: cover;
   text-transform: uppercase;
@@ -50,10 +50,11 @@ h2 {
   padding: 0;
   height: 60px;
   z-index: 3;
+  animation: showup 1.5s;
+  font-weight: bold;
 }
 
 .nav {
-  font-family: 'Space Mono', monospace;
   text-transform: uppercase;
   text-align: center;
   font-weight: 600;
@@ -65,19 +66,14 @@ h2 {
   z-index: 3;
 }
 
-@media (min-width: 600px) {
-  .nav { grid-template-columns: repeat(3, 1fr); }
-  }
-
 @media (min-width: 900px) {
   .nav { grid-template-columns: repeat(3, 1fr); }
 }
 @media (max-width: 900px) {
   #blob {display: none;}
-  h1{font-size: 80px; margin: 0;}
+  h1{margin-bottom: 10vh;}
   .nav {margin: 0;}
 }
-  
 
 .nav * {
   box-sizing: border-box;
@@ -99,20 +95,21 @@ h2 {
   font-size: 20px;
   user-select: none;
 }
+li:nth-child(1) {
+  animation: showup 4s;
+}
+li:nth-child(2) {
+  animation: showup 5s;
+}
+li:nth-child(3) {
+  animation: showup 6s;
+}
+@keyframes showup {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
 
-.cpyrght {
-  text-align: center;
-  font-family: 'Space Mono', monospace;
-  text-transform: capitalize;
-  font-size: 10pt;
-  user-select: none;
-  z-index: 5;
-  position: absolute;
- 
-  width: 100%;
-} 
-
-@keyframes rotate {
+/* @keyframes rotate {
   from {
     rotate: 0deg;
   }
@@ -125,7 +122,6 @@ h2 {
     rotate: 360deg;
   }
 }
-
 #blob {
   height: 20vmax;
   aspect-ratio: 1;
@@ -140,23 +136,10 @@ h2 {
   z-index: -1;
   overflow: hidden;
 }
-
 #blur {
   height: 100%;
   width: 100%;
   position: absolute;
   z-index: 0;
   backdrop-filter: blur(10vmax);
-}
-
-.new {
-  color: white;
-  z-index: 100;
-  text-decoration: underline;
-  margin-top: 8rem;
-  margin-bottom: -6rem;
-}
-.bold {
-  font-size: 1.75rem;
-  font-weight: bold;
-}
+} */
