--- a/style.css
+++ b/style.css
@@ -23,11 +23,7 @@ body {
 } 
 
 h1 {
-  background-image: url(https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif);
-  color: transparent;
-  -moz-background-clip: text;
-  -webkit-background-clip: text;
-  text-transform: uppercase;
+  /* background-image: url(https://assets.materialup.com/uploads/40e7f9d8-58b3-4b23-b450-e0c11035c189/preview.gif); */
   font-size: 120px;
   margin: 0;
   margin-top: 10px;
@@ -37,8 +33,27 @@ h1 {
   height: 85px;
   line-height: 85px;
   width: 280px;
-  animation: showup 3.5s;
+  animation: showup 3.5s, textclip 3s linear infinite;
   font-weight: bold;
+  background-image: linear-gradient(
+    90deg,
+    #6f2232 0%,
+    #950740 25%,
+    #c3073f 50%,
+    #950740 75%,
+    #6f2232 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
 
 h2 {
@@ -50,7 +65,7 @@ h2 {
   padding: 0;
   height: 60px;
   z-index: 3;
-  animation: showup 1.5s;
+  animation: showup 2s;
   font-weight: bold;
 }
 
