--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h2 {
 @media (max-width: 900px) {
   /* #blob {display: none;} */
   h1{margin-bottom: 10vh; font-size: 90px;}
-  h2{font-size: 30px; margin-top: -5vh;}
+  h2{font-size: 30px;}
   .nav {margin: 0; grid-gap: 3rem;}
 }
 
