--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0rem;
   overflow: hidden;
   font-family: 'Space Mono', monospace;
+  position: relative;
 }
 
 .text {
@@ -18,8 +19,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 95vh;
+  height: 100vh;
   user-select: none;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 } 
 
 h1 {
