--- a/style.css
+++ b/style.css
@@ -21,10 +21,6 @@ body {
   justify-content: center;
   height: 100vh;
   user-select: none;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
 } 
 
 h1 {
@@ -91,10 +87,10 @@ h2 {
 }
 @media (max-width: 900px) {
   /* #blob {display: none;} */
-  h1{margin-bottom: 10vh; font-size: 90px;}
+  h1{margin-bottom: 10vh; font-size: 90px; width: 215px; height: 70px; line-height: 70px;}
   h2{font-size: 30px;}
   .nav {margin: 0; grid-gap: 3rem;}
-  .text{height: 100vh;}
+  .text{margin-top: -3vh;}
 }
 
 .nav * {
