--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #1a1a1a;
-  color: white;
+  background-color: var(--background-color);
+  color: var(--font-color);
   text-transform: uppercase;
   letter-spacing: 0.3em;
   font-size: 1.3em;
@@ -38,11 +38,11 @@ h1 {
   font-weight: bold;
   background-image: linear-gradient(
     90deg,
-    #6f2232 0%,
-    #950740 25%,
-    rgb(195, 7, 63) 50%,
-    #950740 75%,
-    #6f2232 100%
+    var(--color-variant-1) 0%,
+    var(--color-variant-2) 25%,
+    var(--color-variant-3) 50%,
+    var(--color-variant-2) 75%,
+    var(--color-variant-1) 100%
   );
   background-size: auto auto;
   background-clip: border-box;
@@ -53,7 +53,7 @@ h1 {
 }
 
 h2 {
-  color: white;
+  color: var(--font-color);
   background-size: cover;
   text-transform: uppercase;
   font-size: 40px;
@@ -91,10 +91,10 @@ h2 {
 }
 
 .nav a {
-  padding: .5em .8em;
-  color: white;
+  color: var(--font-color);
   position: relative;
   text-decoration: none;
+  padding: .5em .8em;
   font-size: 20px;
   user-select: none;
   -webkit-transition: color .2s;
@@ -105,7 +105,7 @@ h2 {
 }
 
 .nav a:hover{
-  color: rgb(195, 7, 63);
+  color: var(--link-color);
 }
 
 hr {
@@ -135,32 +135,31 @@ hr {
 .skill {
   font-size: 1.5rem;
   list-style-type: none;
-  color: #c3073f;
+  color: var(--link-color);
   animation: showup 2s;
 }
 @media (min-width: 900px) {
   .nav { grid-template-columns: repeat(3, 1fr);}
-  #aboutme{
-    width:80%;
-  }
+
+  #aboutme{width:80%;}
 }
 @media (max-width: 900px) {
-  /* #blob {display: none;} */
+
   body{
     margin-top: 12.5vh;
     overflow: visible;
   }
-  .text {
-    height: 180vh;
-  }
-  #aboutme{
-    width: 90%;
-  }
+
+  .text {height: 180vh;}
+
+  #aboutme{width: 90%;}
+
   h1{
     margin-bottom: 10vh;
     font-size: 90px; height: 70px;
     line-height: 70px;
   }
+
   h2{font-size: 30px;}
   .nav {margin: 0; grid-gap: 3rem;}
   .text{margin-top: -3vh;}
@@ -173,4 +172,24 @@ hr {
 
 @keyframes textclip {
   to {background-position: 200% center;}
+}
+
+/*default red theme*/
+/* :root{
+  --background-color: #1a1a1a;
+  --font-color: #fff;
+  --color-variant-1: #6f2232;
+  --color-variant-2: #950740;
+  --color-variant-3: #c3073f;
+  --link-color: #c3073f;
+} */
+
+/* mint theme */
+:root{
+  --background-color: #1d1a19;
+  --font-color: #fff;
+  --color-variant-1: #81bc90;
+  --color-variant-2: #4d7056;
+  --color-variant-3: #334a39;
+  --link-color: #689775;
 }
