--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ Button {
   width: 32px;
   height: 32px;
   text-align: center;
-  display: block;
+  display: grid;
+  place-items: center;
   position: fixed;
   margin: 20px 0 0  20px;
 }
