--- a/style.css
+++ b/style.css
@@ -55,7 +55,16 @@ Button {
   text-align: center;
   display: block;
   position: fixed;
-  margin: 20px 0 0  20px;
+  margin: 20px 0 0 20px;
+  padding: 0;
+}
+button::after{
+  content: \F494;
+}
+img{
+  transition: .5s;
+  height: 16px;
+  width: 16px;
 }
 
 /* body */
@@ -311,9 +320,6 @@ hr {
     margin-top: 5vh;
   }
 
-  /* button {
-    margin: 20px 0 0 20px;
-  } */
 }
 
 /* animations */
