--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ img{
 
 /* body */
 body {
-  transition: .5s;
   background-color: var(--background-color);
   color: var(--font-color);
   text-transform: uppercase;
@@ -99,26 +98,41 @@ body {
   opacity: .75;
 }
 
-/* content */
+@keyframes bg-animation {
+  0% { transform: translate(0,0) }
+  10% { transform: translate(-5%,-5%) }
+  20% { transform: translate(-10%,5%) }
+  30% { transform: translate(5%,-10%) }
+  40% { transform: translate(-5%,15%) }
+  50% { transform: translate(-10%,5%) }
+  60% { transform: translate(15%,0) }
+  70% { transform: translate(0,10%) }
+  80% { transform: translate(-15%,0) }
+  90% { transform: translate(10%,5%) }
+  100% { transform: translate(5%,0) }
+}
+
 .text {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 160vh;
+  height: 175vh;
   user-select: none;
 }
 
 h1 {
-  transition: .5s;
-  text-transform: none;
   font-size: 7rem;
   margin: 0;
   margin-top: 10px;
   margin-bottom: 10vh;
   padding: 0;
-  animation: showup 2s, textclip 5s linear infinite;
+  /* z-index: 3;
+  height: 85px;
+  line-height: 85px;
+  width: 280px; */
+  animation: showup 2s, textclip 2.5s linear infinite;
   font-weight: bold;
   background-image: linear-gradient(
     90deg,
@@ -133,13 +147,13 @@ h1 {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+
 }
 
 h2 {
-  transition: .5s;
-  text-transform: none;
   color: var(--font-color);
   background-size: cover;
+  text-transform: uppercase;
   font-size: 40px;
   margin: 0;
   padding: 0;
@@ -174,15 +188,8 @@ h2 {
   padding: 0;
 }
 
-a{
-  color: var(--font-color);
-}
-
-a:hover{
-  color: var(--link-color);
-}
-
 .nav a {
+  color: var(--font-color);
   position: relative;
   text-decoration: none;
   padding: .5em .8em;
@@ -195,9 +202,14 @@ a:hover{
   transition: color .2s;
 }
 
+.nav a:hover{
+  color: var(--link-color);
+}
+
 .fancy > .letter{
   display: inline-block;
 }
+
 .fancy:hover > .letter:nth-child(1){
   transform:  translate(20%, -30%) rotate(12deg);
 }
@@ -228,80 +240,54 @@ a:hover{
 
 hr {
   width: 75vw;
-  margin: 15vh 0 10vh 0;
+  margin: 15vh auto 15vh auto;
   animation: showup 2s ease-out;
 }
 
-/* about me section */
 #aboutme {
   width: 60%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 10px;
+  display: block;
   text-align: center;
   animation: showup 1.75s ease-out;
 }
-
-#aboutme > :nth-child(1) {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  height: fit-content;
-  margin: auto;
-}
-
-#aboutme > p {
-  grid-column: 1 / 2;
-  grid-row: 2 / 2;
-}
-
-#aboutme > :nth-child(3){
-  grid-column: 2 / 2;
-  grid-row: 1 / 2;
-  height: fit-content;
-  margin: auto;
-}
-
-#aboutme > .knowledge {
-  grid-column: 2/2;
-  grid-row: 2/2;
-}
-
 #aboutmetext {
   text-align: center;
   font-size: 1rem;
   letter-spacing: normal;
+  margin-left: 10vw;
+  margin-right: 10vw;
   animation: showup 2s ease-out;
-  text-transform: none;
 }
 
 .knowledge{
   text-align: center;
 }
-
 .skill {
-  transition: .5s;
   font-size: 1.5rem;
   list-style-type: none;
   color: var(--link-color);
   animation: showup 2s ease-out;
 }
 
+/* .text:has(.fancy:hover) .effect:not(.fancy){
+  opacity: .2;
+} */
+
 @media (min-width: 900px) {
   .nav { grid-template-columns: repeat(3, 1fr);}
+
   #aboutme{width:80%;}
 }
-
 @media (max-width: 900px) {
 
   body{
-    margin-top: 5vh;
+    margin-top: 12.5vh;
     overflow: visible;
   }
 
-  .text {height: 195vh;}
+  .text {height: 185vh;}
 
-  #aboutme{width: 75vw; display: block;}
+  #aboutme{width: 90%;}
 
   h1{
     margin-bottom: 10vh;
@@ -320,7 +306,6 @@ hr {
 
 }
 
-/* animations */
 @keyframes showup {
   0% {opacity: 0; transform: translate(0, 75%);}
   100% {opacity: 1; transform: translate(0, 0);}
@@ -331,7 +316,20 @@ hr {
   to {background-position: 200% center;}
 }
 
-@keyframes bg-animation {
+
+/* mint theme */
+/*:root{
+  --background-color: #232422;
+  --font-color: #fff;
+  --color-variant-1: #81bc90;
+  --color-variant-2: #4d7056;
+  --color-variant-3: #334a39;
+  --link-color: #689775;
+}*/
+
+
+/* experimental */
+/* @keyframes bg-animation {
   0% { transform: translate(0,0) }
   10% { transform: translate(-5%,-5%) }
   20% { transform: translate(-10%,5%) }
@@ -344,3 +342,19 @@ hr {
   90% { transform: translate(10%,5%) }
   100% { transform: translate(5%,0) }
 }
+.bg {
+  z-index: -1;
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  width: 200%;
+  height: 200vh;
+  background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+  background-repeat: repeat;
+  animation: bg-animation .5s infinite;
+  opacity: .9;
+  visibility: visible;
+  padding: 0;
+} */
