--- a/style.css
+++ b/style.css
@@ -310,9 +310,12 @@ hr {
   #aboutme > :nth-child(1), #aboutme >:nth-child(3){
     margin-top: 5vh;
   }
-  
+
   button{
     padding: 0;
+  }
+  button > i{
+    line-height: 1;
   }
 }
 
